--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@
     <title>AutoMob-Home</title>
 </head>
 <body>
+    
     <nav>
             <div class="nav-links">
                 <ul>
@@ -14,6 +15,7 @@
                     <li><a href="">Services</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">To be</a></li>
+                    <li>{userName}</li>
                     <li id="login-btn"><a href="">Login</a></li>
                     <li id="logout-btn" style="display: none;"><a href="">Logout</a></li>
                 </ul>
@@ -42,4 +44,7 @@
 
     </select>
 </body>
+<script>
+    var userName = sessionStorage.getItem('user.username');;
+</script>
 </html>
