--- a/Home.html
+++ b/Home.html
@@ -3,48 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <link rel="stylesheet" href="styles.css">
     <title>AutoMob-Home</title>
 </head>
 <body>
     
     <nav>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">To be</a></li>
-                    <li>{userName}</li>
-                    <li id="login-btn"><a href="">Login</a></li>
-                    <li id="logout-btn" style="display: none;"><a href="">Logout</a></li>
-                </ul>
-            </div>
-            <div class="logo">
-                <a href="">AutoMob &#9881;</a>
-            </div>
+        <div class="nav-links">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+                <li id="user-menu" style="display: none;"><a href=""></a></li>
+                <li id="login-btn"><a href="">Login</a></li>
+                <li id="logout-btn" style="display: none;"><a href="">Logout</a></li>
+            </ul>
+        </div>
+        <div class="logo">
+            <a href="">AutoMob &#9881;</a>
+        </div>
     </nav>
-    <div class="container">
 
+    <div class="container">
         <div class="intro">
-            <h3>The Road to Reliable Maintainance Starts Here</h3>
+            <h3>The Road to Reliable Maintenance Starts Here</h3>
             <p>
-                Rev up your car care experience with AutoMob-Mechainic,
+                Rev up your car care experience with AutoMob-Mechanic,
                 where convenience meets quality service. From routine
-                maintainance to intricate repairs, we've got your back 
+                maintenance to intricate repairs, we've got your back 
                 so you can hit the road worry-free. Drive with confidence,
-                trust AutoMob-Mechainicto keep your wheels turning
+                trust AutoMob-Mechanic to keep your wheels turning
                 smoothly.
             </p>
         </div>
-        
         <button class="explore-us">Explore us</button>
-
     </div>
 
-    </select>
+    <script>
+        // Check if the user is logged in
+        var loggedIn = sessionStorage.getItem('loggedIn');
+        if (loggedIn === "true") {
+            // User is logged in
+            var userRole = sessionStorage.getItem('userRole');
+            var username = sessionStorage.getItem('username');
+
+            // Display username and logout option
+            document.getElementById('user-menu').innerHTML = '<a href="">' + username + '<i class="fas fa-user"></i></a>';
+            document.getElementById('user-menu').style.display = 'block';
+            document.getElementById('login-btn').style.display = 'none';
+            document.getElementById('logout-btn').style.display = 'block';
+        } else {
+            // User is not logged in
+            document.getElementById('login-btn').style.display = 'block';
+        }
+    </script>
 </body>
-<script>
-    var userName = sessionStorage.getItem('user.username');;
-</script>
 </html>
